# redis-chatgpt

./: README.md  build_package.sh  setup.py
examples/: README.md  pyproject.toml
examples/chatbot/: Dockerfile  docker-compose.yml  env.example  requirements.txt  run.sh
examples/chatbot/scripts/: __init__.py  app.py  openai_chatbot.py  request_sample.py  schema.py
redis_chatgpt/: __init__.py
redis_chatgpt/manager/: __init__.py  db_manager.py
