[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "redis_chatgpt"
version = "0.1.0"
description = "A user-friendly package designed to save chat history conversation and truncate conversation if user exceeds max token when using OpenAI chat completion."
authors = ["Elmira Ghorbani"]

[tool.poetry.dependencies]
python = "^3.7"
redis = ">=4.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
